package com.polovyi.ivan.tutorials;

import java.util.Set;

public interface Payment {
    Set<PaymentMethod> getPaymentMethods();

}
