package com.polovyi.ivan.tutorials;

public enum PaymentMethod {
    VISA, MASTER, AMEX, DISCOVER, CASH
}
